force-app/main/default/objects/Api__mdt/Api__mdt.object-meta.xml
<CustomObject>
    <label>Api</label>
    <pluralLabel>Apis</pluralLabel>
</CustomObject>