force-app/main/default/objects/Api__mdt/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <businessOwnerGroup>CRM</businessOwnerGroup>
    <description>This is the encrypted key for the api.</description>
    <inlineHelpText>DO NOT MODIFY</inlineHelpText>
    <label>Key</label>
    <type>TextArea</type>
</CustomField>