force-app/main/default/objects/Api__mdt/fields/Keychain__c.field-meta.xml
<CustomField>
    <fullName>Keychain__c</fullName>
    <businessOwnerGroup>CRM</businessOwnerGroup>
    <inlineHelpText>DO NOT MODIFY</inlineHelpText>
    <label>Keychain</label>
    <type>TextArea</type>
</CustomField>